--- a/code/dev/parts/reports/mobile-tops.html
+++ b/code/dev/parts/reports/mobile-tops.html
@@ -54,13 +54,22 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Countries By Requests</h3>
+              <h3 class="graph-title inline-block">Top 20 Countries By Requests</h3>
+              <label ng-if="!!popoverHelpHTML['country_hits']" uib-popover-html="::popoverHelpHTML['country_hits']" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+                popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="country_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 20 Countries By Users</h3>
+              <h3 class="graph-title inline-block">Top 20 Countries By Users</h3>
+              <label ng-if="!!popoverHelpHTML['country_users']" uib-popover-html="::popoverHelpHTML['country_users']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="country_users" ng-chart-options="usersChartOpts"></div>
               </div>
@@ -71,13 +80,23 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Countries By Traffic</h3>
+              <h3 class="graph-title inline-block">Top 20 Countries By Traffic</h3>
+              <label ng-if="!!popoverHelpHTML['country_gbt']" uib-popover-html="::popoverHelpHTML['country_gbt']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="country_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 20 USA States By Traffic</h3>
+              <h3 class="graph-title inline-block ">Top 20 USA States By Traffic</h3>
+              <label ng-if="!!popoverHelpHTML['usa_states_gbt']" uib-popover-html="::popoverHelpHTML['usa_states_gbt']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="usa_states_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
@@ -87,13 +106,23 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 10 OSes By Requests</h3>
+              <h3 class="graph-title inline-block">Top 10 OSes By Requests</h3>
+              <label ng-if="!!popoverHelpHTML['os_hits']" uib-popover-html="::popoverHelpHTML['os_hits']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="os_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 10 OSes By Users</h3>
+              <h3 class="graph-title inline-block">Top 10 OSes By Users</h3>
+              <label ng-if="!!popoverHelpHTML['os_users']" uib-popover-html="::popoverHelpHTML['os_users']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="os_users" ng-chart-options="usersChartOpts"></div>
               </div>
@@ -103,13 +132,23 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 10 OSes By Traffic</h3>
+              <h3 class="graph-title inline-block">Top 10 OSes By Traffic</h3>
+              <label ng-if="!!popoverHelpHTML['os_gbt']" uib-popover-html="::popoverHelpHTML['os_gbt']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="os_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 20 Devices By Requests</h3>
+              <h3 class="graph-title inline-block">Top 20 Devices By Requests</h3>
+              <label ng-if="!!popoverHelpHTML['device_hits']" uib-popover-html="::popoverHelpHTML['device_hits']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="device_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
@@ -119,13 +158,23 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Devices By Users</h3>
+              <h3 class="graph-title inline-block">Top 20 Devices By Users</h3>
+              <label ng-if="!!popoverHelpHTML['device_users']" uib-popover-html="::popoverHelpHTML['device_users']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="device_users" ng-chart-options="usersChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 20 Devices By Traffic</h3>
+              <h3 class="graph-title inline-block">Top 20 Devices By Traffic</h3>
+              <label ng-if="!!popoverHelpHTML['device_gbt']" uib-popover-html="::popoverHelpHTML['device_gbt']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="device_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
@@ -135,13 +184,23 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Providers By Requests</h3>
+              <h3 class="graph-title inline-block">Top 20 Providers By Requests</h3>
+              <label ng-if="!!popoverHelpHTML['operator_hits']" uib-popover-html="::popoverHelpHTML['operator_hits']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="operator_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 20 Providers By Users</h3>
+              <h3 class="graph-title inline-block">Top 20 Providers By Users</h3>
+              <label ng-if="!!popoverHelpHTML['operator_users']" uib-popover-html="::popoverHelpHTML['operator_users']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="operator_users" ng-chart-options="usersChartOpts"></div>
               </div>
@@ -151,13 +210,23 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Providers By Traffic</h3>
+              <h3 class="graph-title inline-block">Top 20 Providers By Traffic</h3>
+              <label ng-if="!!popoverHelpHTML['operator_gbt']" uib-popover-html="::popoverHelpHTML['operator_gbt']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="operator_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
-              <h3>WiFi/Cellular Distribution By Requests</h3>
+              <h3 class="graph-title inline-block">WiFi/Cellular Distribution By Requests</h3>
+              <label ng-if="!!popoverHelpHTML['network_hits']" uib-popover-html="::popoverHelpHTML['network_hits']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="network_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
@@ -167,13 +236,23 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>WiFi/Cellular Distribution By Users</h3>
+              <h3 class="graph-title inline-block">WiFi/Cellular Distribution By Users</h3>
+              <label ng-if="!!popoverHelpHTML['network_users']" uib-popover-html="::popoverHelpHTML['network_users']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="network_users" ng-chart-options="usersChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
-              <h3>WiFi/Cellular Distribution By Traffic</h3>
+              <h3 class="graph-title inline-block">WiFi/Cellular Distribution By Traffic</h3>
+              <label ng-if="!!popoverHelpHTML['network_gbt']" uib-popover-html="::popoverHelpHTML['network_gbt']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="network_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
@@ -183,13 +262,23 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 10 Domains By Requests</h3>
+              <h3 class="graph-title inline-block">Top 10 Domains By Requests</h3>
+              <label ng-if="!!popoverHelpHTML['domain_hits']" uib-popover-html="::popoverHelpHTML['domain_hits']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="domain_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 10 Domains By Traffic</h3>
+              <h3 class="graph-title inline-block">Top 10 Domains By Traffic</h3>
+              <label ng-if="!!popoverHelpHTML['domain_gbt']" uib-popover-html="::popoverHelpHTML['domain_gbt']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="domain_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
@@ -198,7 +287,12 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 10 HTTP Status Codes</h3>
+              <h3 class="graph-title inline-block">Top 10 HTTP Status Codes</h3>
+              <label ng-if="!!popoverHelpHTML['status_code_hits']" uib-popover-html="::popoverHelpHTML['status_code_hits']" class="text-info graph-help-icon"
+                popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                popover-placement="top">
+                <i class="fa fa-question-circle" aria-hidden="true"></i>
+              </label>
               <div>
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="status_code_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
